[package]
name = "stream-indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3.17"
tokio = { version = "1.13.0", features = ["full"] }
arc-swap = "1.4.0"

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1